# project_e-commerce

./: .coverage  README.md  pyproject.toml
src/: main.py
tests/: conftest.py  test_main.py
